# sphero_ros

sphero_bringup/launch/: sphero.launch
sphero_description/urdf/: sphero.urdf
sphero_driver/src/sphero_driver/: sphero_driver.py
sphero_node/: CMakeLists.txt
sphero_node/nodes/: sphero.py
sphero_teleop/: CMakeLists.txt  package.xml
sphero_teleop/launch/: ps3_teleop.launch
sphero_teleop/src/: sphero_joy.cpp
